--- a/manager-provider/src/main/resources/application.properties
+++ b/manager-provider/src/main/resources/application.properties
@@ -17,3 +17,17 @@ info.app.name=comment-microservicecloud
 info.company.name=www.*****.com
 pagehelper.reasonable=true
 
+
+#如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)。
+spring.redis.lettuce.pool.max-active=300
+# 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时。如果超过等待时间，则直接抛出JedisConnectionException
+spring.redis.pool.max-wait=200
+spring.redis.pool.max-idle=100
+spring.redis.pool.min-idle=50
+spring.redis.shutdown-timeout=100ms
+
+#spring.redis.cluster.nodes=47.100.28.226:6379,47.100.28.226:6380,47.100.28.226:6381,47.100.28.226:6382
+spring.redis.timeout=5000
+spring.redis.sentinel.nodes=47.100.28.226:26379,47.100.28.226:26380,47.100.28.226:26381
+spring.redis.sentinel.master=myredis
+
