2021-2-18 增添了RabbitMQ消息队列 进一步解耦

--- a/manager-consumer/src/main/resources/application.properties
+++ b/manager-consumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9999
 spring.application.name=manager-consumer
 eureka.client.service-url.defaultZone=http://server01:7001/eureka,http://server02:7002/eureka
-feign.hystrix.enabled=true
+feign.hystrix.enabled=false
 
