--- a/manager-provider/src/main/resources/application.properties
+++ b/manager-provider/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8888
 spring.jpa.show-sql=true
-spring.application.name=manager-provider
+spring.application.name=manager-selectProvider
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/select?characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -10,7 +10,7 @@ mybatis.type-aliases-package=com.springcloudt1.managerapi.entity
 #注册到eureka服务端的地址
 eureka.client.service-url.defaultZone=http://server01:7001/eureka,http://server02:7002/eureka
 #自定义服务名称的信息
-eureka.instance.instance-id=comment-provider01
+eureka.instance.instance-id=comment-selectProvider
 #访问路径可以显示为ip地址
 eureka.instance.prefer-ip-address=true
 info.app.name=comment-microservicecloud
@@ -31,3 +31,9 @@ spring.redis.timeout=5000
 spring.redis.sentinel.nodes=47.100.28.226:26379,47.100.28.226:26380,47.100.28.226:26381
 spring.redis.sentinel.master=myredis
 
+spring.rabbitmq.port=5672
+spring.rabbitmq.host=47.100.28.226
+spring.rabbitmq.username=xiaohai
+spring.rabbitmq.password=admin123
+spring.rabbitmq.virtual-host=host2
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
