--- a/manager-provider-2/src/main/resources/application.properties
+++ b/manager-provider-2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8889
 spring.jpa.show-sql=true
-spring.application.name=manager-provider
+spring.application.name=manager-addProvider
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
 spring.datasource.username=root
@@ -10,7 +10,7 @@ mybatis.type-aliases-package=com.springcloudt1.managerapi.entity
 #注册到eureka服务端的地址
 eureka.client.service-url.defaultZone=http://server01:7001/eureka,http://server02:7002/eureka
 #自定义服务名称的信息
-eureka.instance.instance-id=comment-provider02
+eureka.instance.instance-id=comment-addProvider
 #访问路径可以显示为ip地址
 eureka.instance.prefer-ip-address=true
 info.app.name=comment-microservicecloud
@@ -29,3 +29,9 @@ spring.redis.shutdown-timeout=100ms
 spring.redis.timeout=5000
 spring.redis.sentinel.nodes=47.100.28.226:26379,47.100.28.226:26380,47.100.28.226:26381
 spring.redis.sentinel.master=myredis
+spring.rabbitmq.port=5672
+spring.rabbitmq.host=47.100.28.226
+spring.rabbitmq.username=xiaohai
+spring.rabbitmq.password=admin123
+spring.rabbitmq.virtual-host=host2
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
