--- a/manager-provider/pom.xml
+++ b/manager-provider/pom.xml
@@ -29,6 +29,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 		<!-- actuator监控信息 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
